[package]
name = "minichain"
version = "0.1.0"
authors = ["psyto"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
secp256k1 = { version = "0.17.2", features = ["rand", "serde"] }
rand = "0.6"
bitcoin_hashes = "0.7.6"
bs58 = "0.3.1"
hex = "0.4.2"
